fix search popup dark mode

--- a/themes/adidoks/sass/components/_search.scss
+++ b/themes/adidoks/sass/components/_search.scss
@@ -11,6 +11,10 @@
   overflow: auto;
 }
 
+body.dark #suggestions {
+  background: $body-overlay-dark;
+}
+
 #suggestions a {
   display: block;
   text-decoration: none;
@@ -23,8 +27,16 @@
   outline: 0;
 }
 
+body.dark #suggestions a:focus {
+  background: $body-overlay-dark;
+}
+
 #suggestions div:not(:first-child) {
   border-top: 1px dashed $gray-200;
+}
+
+body.dark #suggestions div:not(:first-child) {
+  border-top: 1px dashed $border-dark;
 }
 
 #suggestions div:first-child {
@@ -39,6 +51,10 @@
   background: $gray-100;
 }
 
+body.dark #suggestions a:hover {
+  background: $body-overlay-dark;
+}
+
 #suggestions span {
   // display: flex;
   font-size: $font-size-base;
@@ -49,8 +65,16 @@
   color: $black;
 }
 
+body.dark #suggestions span:first-child {
+  color: $body-color-dark;
+}
+
 #suggestions span:nth-child(2) {
   color: $gray-700;
+}
+
+body.dark #suggestions span:nth-child(2) {
+  color: $gray-500;
 }
 
 @include media-breakpoint-up(sm) {
@@ -68,6 +92,10 @@
     border-right: 1px solid $gray-200;
     display: inline-block;
     text-align: right;
+  }
+
+  body.dark #suggestions span:first-child {
+    border-right: 1px solid $border-dark;
   }
 
   #suggestions span:nth-child(2) {
